feat(auth): oauth for all roles, change password, throttle, tests
